--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://henry.github.io/'
+baseURL = 'https://won8062.github.io'
 languageCode = 'en-us'
 title = 'Henry Blog'
 theme = "mainroad"
